제목및소스변경

--- a/WebContent/Ex12_Jquery_Append.html
+++ b/WebContent/Ex12_Jquery_Append.html
@@ -45,7 +45,7 @@
 	</ol>
 	
 	<button id="btn1">Append text</button>
-	<button id="btn2">Appned list items</button>
+	<button id="btn2">Append list items</button>
 
 </body>
 </html>
