--- a/WebContent/Ex15_Jquery_Effect_1.html
+++ b/WebContent/Ex15_Jquery_Effect_1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="EUC-KR">
+	<meta charset="utf-8">
 	<title>Effect</title>
 	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			$('.region').show();
 			$('#moreregion').hide();
-			//$("p").toggle();  hide(),show() ´Ù °¡Áö°í ÀÖ´Ù
+			//$("p").toggle();  hide(),show() ë‹¤ ê°€ì§€ê³  ìžˆë‹¤
 			
 			$('.more').click(function(){
 				$('#moreregion').show(5000,function(){alert('END');});
@@ -33,7 +33,7 @@
 		See you again....
 	</div>
 	<hr>
-	<input type="button" id="btn" value="ÆäÀÌµå È¿°ú">
+	<input type="button" id="btn" value="íŽ˜ì´ë“œ íš¨ê³¼">
 	<div id="first"
 		style="background-color: gold; height: 100px; display: none">
 		First DIV
