--- a/WebContent/Ex11_Jquery_each_keypoint.html
+++ b/WebContent/Ex11_Jquery_each_keypoint.html
@@ -24,22 +24,22 @@
 		//1번의 다음의 3가지 패턴 > html태그를 다룰 때 좋음
 		//1번 외부 api가 많이 ㅆ는 방법
 		$('p').each(function() {
-			console.log("this :" + $(this).text()); // this > p태그
+			console.log("1-1 this: " + $(this).text()); // this > p태그
 		});
 		//2번
 		$('p').each(function(index) {
-			console.log("index : " + index); //The index position of the selector
-			console.log("this :" + $(this).text()); // this > p태그
+			console.log("index: " + index); //The index position of the selector
+			console.log("1-2 this: " + $(this).text()); // this > p태그
 			//$(this).attr("id", "param-"+index);
 			$(this).attr({
 				"id":"param-"+index,
-				"color": "red"					
+				"color": "red" //이건 안되는듯					
 			});
 		});
 		//3번 이게 젤 편함
 		$('p').each(function(index, element) {
-			console.log("index : " + index); //The index position of the selector
-			console.log("element :" + element + " / " + $(element).text()); // this > p태그
+			console.log("index: " + index); //The index position of the selector
+			console.log("1-3 element: " + element + " / " + $(element).text()); // this > p태그
 		});
 		
 		$('#btn').click(function(){
@@ -59,7 +59,7 @@
 		//function(index, obj)
 		$.each(array, function(index, obj){
 			//console.log("index: "+" / obj: "+obj);
-			console.log("obj.name: "+obj.name+" / obj.link"+obj.link);
+			console.log("obj.name: "+obj.name+" / obj.link: "+obj.link);
 		});
 		
 		//$('p').each(function(index, element){})
